--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "gsap": "^3.11.5",
     "intersection-observer": "^0.12.2",
-    "scss": "^0.2.4"
+    "scss": "^0.2.4",
+    "swiper": "^9.2.4"
   }
 }
